--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
 							</center>
 							<center><br><br>
 								<ul class="social_section_1info">
-									<li><a href="https://github.com/bukanspot"><span
-												class="fa fa-github"></span></a></li>
-									<li><a href="https://www.linkedin.com/in/bukanspot"><span
-												class="fa fa-linkedin"></span></a></li>
-									<li><a href="https://id.pinterest.com/bukanspot/_created/"><span
-												class="fa fa-pinterest"></span></a></li>
-									<li><a href="https://web.facebook.com/bukanspot/"><span
-												class="fa fa-facebook"></span></a></li>
-									<li><a href="https://www.instagram.com/bukanspot/"><span
-												class="fa fa-instagram"></span></a></li>
-									<li><a href="https://www.t.me/bukanspot"><span
-												class="fa fa-telegram"></span></a></li>
+									<li><a href="https://s.id/1cLcv"><span class="fa fa-github"></span></a>
+									</li>
+									<li><a href="https://s.id/1cLcT"><span class="fa fa-linkedin"></span></a>
+									</li>
+									<li><a href="https://s.id/1cLd8"><span class="fa fa-pinterest"></span></a>
+									</li>
+									<li><a href="https://s.id/1cLde"><span class="fa fa-facebook"></span></a>
+									</li>
+									<li><a href="https://s.id/1cLdh"><span class="fa fa-instagram"></span></a>
+									</li>
+									<li><a href="https://s.id/1cLdk"><span class="fa fa-telegram"></span></a>
+									</li>
 								</ul>
 							</center>
 						</div>
