--- a/index.html
+++ b/index.html
@@ -2,96 +2,155 @@
 <html lang="en">
 
 <head>
-     <meta charset="utf-8">
-     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-     <title>Indra Wahyu</title>
-     <meta content="" name="description">
-     <meta content="" name="keywords">
+  <title>Indra Wahyu</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-     <!-- Favicons -->
-     <link href="assets/img/favicon.png" rel="icon">
-     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-     <!-- Google Fonts -->
-     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-          rel="stylesheet">
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
-     <!-- Vendor CSS Files -->
-     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-     <!-- Template Main CSS File -->
-     <link href="assets/css/style.css" rel="stylesheet">
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-     <!-- ======= Header ======= -->
-     <header id="header" class="d-flex flex-column justify-content-center">
-          <nav id="navbar" class="navbar nav-menu">
-               <ul>
-                    <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i>
-                              <span>Home</span></a></li>
-               </ul>
-          </nav>
-     </header>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i>
+            <span>Home</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-     <!-- ======= Hero Section ======= -->
-     <section id="hero" class="d-flex flex-column justify-content-center">
-          <div class="container" data-aos="zoom-in" data-aos-delay="100">
-               <h1>Indra Wahyu</h1>
-               <p>I'm <span class="typed" data-typed-items="Engineer, Developer, Freelancer"></span>
-               </p>
-               <div class="social-links">
-                    <a href="https://github.com/bukanspot" class="github"><i class="bx bxl-github"></i></a>
-                    <a href="https://instagram.com/bukanspot" class="instagram"><i class="bx bxl-instagram"></i></a>
-                    <a href="https://linkedin.com/in/bukanspot" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-               </div>
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column justify-content-center">
+    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <h1>Indra Wahyu</h1>
+      <p>I'm <span class="typed" data-typed-items="Engineer, Developer, Freelancer"></span>
+      </p>
+      <div class="social-links">
+        <a href="https://github.com/bukanspot" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://instagram.com/bukanspot" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://linkedin.com/in/bukanspot" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+    </div>
+  </section>
+
+  <main id="main">
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>About</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
-     </section>
-
-     <!-- ======= Footer ======= -->
-     <footer id="footer">
-          <div class="container">
-               <h3>Indra Wahyu</h3>
-               <p>Information Technology Student at Udayana University.</p>
-               <div class="social-links">
-                    <a href="https://twitter.com/bukanspot" class="twitter"><i class="bx bxl-twitter"></i></a>
-                    <a href="https://facebook.com/bukanspot" class="facebook"><i class="bx bxl-facebook"></i></a>
-                    <a href="https://instagram.com/bukanspot" class="instagram"><i class="bx bxl-instagram"></i></a>
-                    <a href="https://linkedin.com/in/bukanspot" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                    <a href="https://id.pinterest.com/bukanspot/" class="pinterest"><i class="bx bxl-pinterest"></i></a>
-               </div>
-               <div class="copyright">
-                    &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-               </div>
-               <div class="credits">
-                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-               </div>
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <h3>Briefly about me.</h3>
+            <p>
+              Hello, my name is Indra Wahyu, I am an Information Technology student at
+              Udayana University with a concentration in Network Security Management. I am
+              interested in
+              learning and following the rapid development of the world of technology and
+              information.
+              Currently I focus on studying Network Engineer, Cyber Security and IoT Development.
+            </p>
+            <!-- <div class="row">
+                                   <div class="col-lg-6">
+                                        <ul>
+                                             <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7
+                                                       July</span></li>
+                                             <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
+                                                  <span>www.bukanspot.github.io</span></li>
+                                             <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123
+                                                       456 7890</span></li>
+                                             <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New
+                                                       York, USA</span></li>
+                                        </ul>
+                                   </div>
+                                   <div class="col-lg-6">
+                                        <ul>
+                                             <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong>
+                                                  <span>22</span></li>
+                                             <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong>
+                                                  <span>Master</span></li>
+                                             <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
+                                                  <span>indrawahyu@duck.com</span></li>
+                                             <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
+                                                  <span>Available</span></li>
+                                        </ul>
+                                   </div>
+                              </div> -->
           </div>
-     </footer>
+        </div>
 
-     <div id="preloader"></div>
-     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-               class="bi bi-arrow-up-short"></i></a>
+      </div>
+    </section><!-- End About Section -->
+  </main>
 
-     <!-- Vendor JS Files -->
-     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-     <script src="assets/vendor/aos/aos.js"></script>
-     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-     <script src="assets/vendor/typed.js/typed.umd.js"></script>
-     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-     <script src="assets/vendor/php-email-form/validate.js"></script>
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <h3>Indra Wahyu</h3>
+      <p>Information Technology Student at Udayana University.</p>
+      <div class="social-links">
+        <a href="https://twitter.com/bukanspot" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://facebook.com/bukanspot" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://instagram.com/bukanspot" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://linkedin.com/in/bukanspot" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://id.pinterest.com/bukanspot/" class="pinterest"><i class="bx bxl-pinterest"></i></a>
+      </div>
+      <div class="copyright">
+        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+  </footer>
 
-     <!-- Template Main JS File -->
-     <script src="assets/js/main.js"></script>
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
 </body>
 
