--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Indra Wahyu</h1>
-      <p>I'm <span class="typed" data-typed-items="Engineer, Developer, Freelancer"></span>
+      <p>I'm <span class="typed" data-typed-items="Network Engineer, IoT Developer, DevOps Engineer, Freelancer"></span>
       </p>
       <div class="social-links">
         <a href="https://github.com/bukanspot" class="github"><i class="bx bxl-github"></i></a>
@@ -80,32 +80,31 @@
               information.
               Currently I focus on studying Network Engineer, Cyber Security and IoT Development.
             </p>
-            <!-- <div class="row">
-                                   <div class="col-lg-6">
-                                        <ul>
-                                             <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7
-                                                       July</span></li>
-                                             <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                                                  <span>www.bukanspot.github.io</span></li>
-                                             <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123
-                                                       456 7890</span></li>
-                                             <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New
-                                                       York, USA</span></li>
-                                        </ul>
-                                   </div>
-                                   <div class="col-lg-6">
-                                        <ul>
-                                             <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                                                  <span>22</span></li>
-                                             <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong>
-                                                  <span>Master</span></li>
-                                             <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
-                                                  <span>indrawahyu@duck.com</span></li>
-                                             <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
-                                                  <span>Available</span></li>
-                                        </ul>
-                                   </div>
-                              </div> -->
+            <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7
+                      July</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
+                    <span>bukanspot.github.io</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+6281 6296 107</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New
+                      York, USA</span></li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong>
+                    <span>22</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong>
+                    <span>Bachelor</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
+                    <span>indrawahyu@duck.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
+                    <span>Available</span></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
 
