--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
                     <span>bukanspot.github.io</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+6281 6296 107</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New
-                      York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Indonesia (+62)</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
