--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Indra Wahyu</h1>
-      <p>I'm <span class="typed" data-typed-items="Network Engineer, IoT Developer, DevOps Engineer, Freelancer"></span>
+      <p>I'm a <span class="typed" data-typed-items="System Administrator, Embedded Developer, DevOps Engineer, Freelancer"></span>
       </p>
       <div class="social-links">
-        <a href="https://github.com/bukanspot" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://instagram.com/bukanspot" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/bukanspot" class="github"><i class="bx bxl-github"></i></a>
+        <a rel="me" href="https://mastodon.social/@bukanspot" class="mastodon"><i class="bx bxl-mastodon"></i></a>
         <a href="https://linkedin.com/in/bukanspot" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
