--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               interested in
               learning and following the rapid development of the world of technology and
               information.
-              Currently I focus on studying Network Engineer, Cyber Security and IoT Development.
+              Currently I focus on studying Sysadmin, DevOps and Embedded System.
             </p>
             <div class="row">
               <div class="col-lg-6">
