--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>7
                       July</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                    <span>bukanspot.github.io</span></li>
+                    <span><a href="https://bukanspot.github.io">bukanspot.github.io</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+6281 6296 107</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Indonesia (+62)</span></li>
                 </ul>
@@ -95,11 +95,11 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                    <span>22</span></li>
+                    <span id="age"></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong>
                     <span>Bachelor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                    <span>indrawahyu@duck.com</span></li>
+                    <span><a href="mailto:indrawahyu@duck.com">indrawahyu@duck.com</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
                     <span>Available</span></li>
                 </ul>
@@ -150,6 +150,9 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Custom JS -->
+  <script src="assets/js/custom.js"></script>
 
 </body>
 
